# ml-digits-claude

./: .gitignore  README.md
.github/workflows/: deploy.yml
model/: digit_classifier.ipynb  digit_classifier.onnx  digit_classifier.onnx.data  pyproject.toml
web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
web/src/routes/: +page.svelte
web/static/model/: digit_classifier.onnx
web/tests/: digit-classifier.spec.ts
